# Bayesian-STAPLE

./: LICENSE  README.md  pyproject.toml
src/bayesian-staple/: algorithm.py
src/bstaple/: __init__.py  algorithm.py  sampling.py
tests/: test_module.py
