[tool.poetry]
name = "bstaple"
version = "0.0.1"
description = "Bayesian version of STAPLE"
authors = [
    "Davide Cazzorla <d.cazzorla97@gmail.com>",
    "Corrado Mencar <corrado.mencar@uniba.it>"
]
readme = "README.md"
packages = [{include = "src/bayesian-staple"}]
homepage = ""
repository = ""
keywords = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jax-tqdm = ">=0.2.1"
jax = ">=0.4.12"
xarray = ">=2024.3.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
